public class Chicken extends Bird{
    public Chicken(int age, String gender, int weight) {
        super(age, gender, weight);
    }
}
