public class Earth {
    public static void main(String[] args) {
        Human human1 = new Human("Tom Wellington", 15, 72, "brown");
        human1.speak();
    }
}
