@startuml

title __PREREQUISITE_OOP's Class Diagram__\n

  package  {
    abstract class Animal {
    }
  }
  

  package  {
    class Bird {
    }
  }
  

  package  {
    class Chicken {
    }
  }
  

  package  {
    class Earth {
    }
  }
  

  package  {
    interface Flyable {
    }
  }
  

  package  {
    class Human {
    }
  }
  

  package  {
    class Sparrow {
    }
  }
  

  package  {
    class Zoo {
    }
  }
  

  Bird -up-|> Animal
  Chicken -up-|> Bird
  Sparrow -up-|> Flyable
  Sparrow -up-|> Bird


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
